--- a/index.html
+++ b/index.html
@@ -6,6 +6,54 @@
     <title>Document</title>
 </head>
 <body>
-    abc
+    <div class="logo">
+    <img width="100" src="https://fvc-dn-coding.web.app/images/vovinamlogo.png">
+</div>
+   <div class ="list">
+    <ul>
+        <li>
+            <a href="https://www.facebook.com/Fvcudn">FVC Page</a>
+        </li>
+        <li> 
+            <a href="https://www.facebook.com/Fvcudn/videos/279294191823751">Hoạt Động</a>
+        </li>
+        <li>
+            <a href="">Nội Quy</a>
+        </li>
+        <li>
+            <img width="80" src="https://fvc-dn-coding.web.app/images/FVCLogo.png" alt="FVC logo">
+        </li>
+    </ul>
+   </div>
+   <img width="1500" src="https://fvc-dn-coding.web.app/images/FVC-DN.jpg" alt="FVC Club">
+   <div class="heading">
+    <h1>Thanh Xuân như một cơn mưa rào. </h1>
+    <p>Cho dù bị cảm, vẫn muốn quay lại để được ướt thêm lần nữa</p>
+   </div>
+   <div class="practice">
+    <h3>Luyện Tập</h3>
+    <p>Khổ luyện thành tài?Chưa đủ! bạn cần một người thầy giỏi và một lớp học thật nhiệt huyết.</p>
+    <div class="practice-picture">
+        <img width="1500" src="https://fvc-dn-coding.web.app/images/luyentap1.jpg" alt="Luyện tập">
+        <img width="1500" src="https://fvc-dn-coding.web.app/images/luyentap2.jpg" alt="Luyện tập">
+        <img width="1500" src="https://fvc-dn-coding.web.app/images/luyentap3.jpg" alt="Luyện tập">
+        <img width="1500" src="https://fvc-dn-coding.web.app/images/luyentap4.jpg" alt="Luyện tập">
+        <img width="1500" height="2000" src="https://fvc-dn-coding.web.app/images/luyentap5.jpg" alt="Luyện tập">
+    </div>
+   </div>
+   <div class="title-motto">
+    <h4>12 phương châm Tu Dưỡng và Hành Xử của môn sinh Vovinam</h4>
+   </div>
+   <div class="motto">
+    <p>Luyện thể - Luyện thân - Luyện Khí</p>
+    <p>Thường khiêm - Thường dung - Thường liên</p>
+    <p>Tận tình - Tận tâm - Tận nghĩa</p>
+    <p>Lập thân - Lập chí - Lập nghiệp</p>
+   </div>
+    <div class="contact">
+        <h4>Thông tin liên lạc:</h4>
+        <p>FPTU Vovinam Club - Đà Nẵng</p>
+        <p>Địa chỉ:FPT city - Hòa Hải, Ngũ Hành Sơn, Đà Nẵng.</p>
+    </div>
 </body>
 </html>
